# ticket-selling-dapp

./: README.md
hello-world/: Cargo.toml  lib.rs
hello-world/hello-world-io/: Cargo.toml  lib.rs
proyectoConcierto/: Cargo.toml
venta-boletos-1/: package-lock.json  package.json
venta_boletos/: Cargo.toml  Makefile  build.rs
venta_boletos/io/: Cargo.toml
venta_boletos/io/src/: lib.rs
venta_boletos/src/: contract.rs  lib.rs
venta_boletos/state/: Cargo.toml
venta_boletos/state/src/: lib.rs
venta_boletos/tests/: concert_tests.rs  utils.rs
venta_concierto/: Cargo.toml  build.rs
venta_concierto/api/: .env  package-lock.json  package.json
venta_concierto/api/src/: payloads.ts
venta_concierto/io/: Cargo.toml
venta_concierto/io/src/: lib.rs
venta_concierto/src/: contract.rs  lib.rs
venta_concierto/state/: Cargo.toml
venta_concierto/state/src/: lib.rs
venta_concierto/tests/: nodes_tests.rs  utils.rs  venta_tests.rs
