[package]
name = "venta_boletos"
version = "0.1.0"
#Edicion de Rust a usar, aqui se usa 2021 por el Cargo que se usa actualmente es de 2021
edition = "2021"

[dependencies]
#Son las dependencias necesarias para construir y correr el proyecto
#gstd, gtest, gclient, multitoken-io y gear-lib son las bibliotecas de Gear en Rust
#rev se refiere al hash del commit del ambiente estable de las bibliotecas
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68", features = ["debug"] }
multitoken-io = { git = "https://github.com/gear-dapps/multitoken.git", tag = "0.3.5" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.6" }
#Hashbrown se usa para poder usar hashmaps en el desarrollo
hashbrown = "0.13"
venta_boletos-io = { path = "io" }

[dev-dependencies]
#Son las dependencias usadas en pruebas y desarrollo
venta_boletos-state = { path = "state", features = ["binary-vendor"] }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
gclient = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
#tokio es un runtime asincrono en rust
tokio = "1"

[build-dependencies]
#Son las dependencias usadas para construir el programa
#Necesitamos el io porque usaremos metadata en el build
venta_boletos-io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }

[features]
#Se usa sobretodo para los tests con gtest, introduce los binarios de WASM del contrato
# en el crate root
binary-vendor = []

[workspace]
#Incluye todos los crates de metawasm en la seccion de workspace para construir el programa
members = ["state"]
