[package]
name = "venta_boletos-state"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0", features = ["debug"] }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0", features = ["codegen"] }
venta_boletos-io = { path = "../io" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.6" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0", features = ["metawasm"] }

[features]
binary-vendor = []
